--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #040404;
+  background-color: rgb(253, 253, 253,0);
   color: #fff;
   position: relative;
   background: transparent;
@@ -18,7 +18,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bg.jpg") top right no-repeat;
+  background: #fdfdfd url("../img/bg.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -33,7 +33,7 @@ body::before {
 }
 
 a {
-  color: #18d26e;
+  color: #f4f5f7;
   text-decoration: none;
 }
 
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #header h2 span {
   color: #fff;
-  border-bottom: 2px solid #18d26e;
+  border-bottom: 2px solid #f4f5f7;
   padding-bottom: 6px;
 }
 #header img {
@@ -97,7 +97,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255,0);
   color: #fff;
   line-height: 1;
   margin-right: 8px;
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 40px;
 }
 #header .social-links a:hover {
-  background: #18d26e;
+  background: #f7f5f4;
 }
 @media (max-width: 992px) {
   #header h1 {
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   top: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgb(253, 253, 253,0);
 }
 #header.header-top .social-links, #header.header-top h2 {
   display: none;
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: #f4f5f7;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -249,7 +249,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0);
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
@@ -301,10 +301,15 @@ section.section-show {
   opacity: 1;
   padding-bottom: 45px;
 }
-section .container {
-  background: rgba(0, 0, 0, 0.9);
+/*section .container {
+  background: rgba(0, 0, 0, 1);
   padding: 30px;
-}
+}*/
+/*.container #hss{
+  background: rgba(0, 0, 0, 0);
+  padding: 30px;
+}*/
+
 @media (max-width: 768px) {
   section {
     top: 120px;
@@ -330,7 +335,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #4ceb95;
+  background: #f4f5f7;
   margin: 4px 10px;
 }
 .section-title p {
@@ -349,7 +354,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #18d26e;
+  color: #f4f5f7;
 }
 .about-me .content ul {
   list-style: none;
@@ -366,7 +371,7 @@ section .container {
 .about-me .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #18d26e;
+  color: #f4f5f7;
   line-height: 0;
 }
 .about-me .content p:last-child {
@@ -394,7 +399,7 @@ section .container {
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
-  color: #18d26e;
+  color: #f4f5f7;
   border-radius: 50px;
   line-height: 0;
 }
@@ -440,7 +445,7 @@ section .container {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #18d26e;
+  background-color: #f4f5f7;
 }
 
 /*--------------------------------------------------------------
@@ -535,7 +540,7 @@ section .container {
   background-color: rgba(255, 255, 255, 0.3);
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #f4f5f7;
 }
 
 /*--------------------------------------------------------------
@@ -560,7 +565,7 @@ section .container {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #18d26e;
+  color: #f4f5f7;
   margin-bottom: 10px;
 }
 .resume .resume-item h5 {
@@ -588,8 +593,8 @@ section .container {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #f4f5f7;
+  border: 2px solid #f4f5f7;
 }
 
 /*--------------------------------------------------------------
@@ -605,7 +610,7 @@ section .container {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #18d26e;
+  background: #f4f5f7;
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   display: flex;
@@ -644,14 +649,14 @@ section .container {
   margin-bottom: 0;
 }
 .services .icon-box:hover {
-  background: #18d26e;
-  border-color: #18d26e;
+  background: #f4f5f7;
+  border-color: #f4f5f7;
 }
 .services .icon-box:hover .icon {
   background: #fff;
 }
 .services .icon-box:hover .icon i {
-  color: #18d26e;
+  color: #f4f5f7;
 }
 .services .icon-box:hover .icon::before {
   background: #35e888;
@@ -682,14 +687,14 @@ section .container {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #fff;
+  color: #7c7d7e;
   background: rgba(255, 255, 255, 0.1);
   margin: 0 3px 10px 3px;
   transition: all 0.3s ease-in-out;
   border-radius: 4px;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #f4f5f7;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -699,11 +704,11 @@ section .container {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0);
 }
 .portfolio .portfolio-wrap::before {
   content: "";
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0);
   position: absolute;
   left: 30px;
   right: 30px;
@@ -857,7 +862,7 @@ section .container {
   background-color: rgba(255, 255, 255, 0.3);
 }
 .portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #f4f5f7;
 }
 
 /*--------------------------------------------------------------
@@ -871,7 +876,7 @@ section .container {
 }
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #18d26e;
+  color: #f4f5f7;
   border-radius: 50%;
   padding: 14px;
   float: left;
@@ -903,7 +908,7 @@ section .container {
   transition: 0.3s;
 }
 .contact .info-box .social-links a:hover {
-  color: #18d26e;
+  color: #f4f5f7;
 }
 .contact .php-email-form {
   padding: 30px;
@@ -923,7 +928,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #18d26e;
+  background: #f4f5f7;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -941,7 +946,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #f4f5f7;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -973,7 +978,7 @@ section .container {
   padding: 12px 15px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #18d26e;
+  background: #f4f5f7;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1022,7 +1027,7 @@ section .container {
   }
 }
 .credits a {
-  color: #18d26e;
+  color: #f4f5f7;
   transition: 0.3s;
 }
 .credits a:hover {
